--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="theme-color" content="#4f46e5">
-    <meta name="description" content="Weekly Food Prep & Sharing Roster Management">
+    <meta name="description" content="Fortnightly Food Prep & Sharing Roster Management">
+    <meta http-equiv="refresh" content="0; url=./index.html" />
     <title>FoodShare Roster</title>
     
     <link rel="manifest" href="./manifest.json">
