--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="theme-color" content="#4f46e5">
     <meta name="description" content="Fortnightly Food Prep & Sharing Roster Management">
-    <meta http-equiv="refresh" content="0; url=./index.html" />
+    <!-- <meta http-equiv="refresh" content="0; url=./index.html" /> -->
     <title>FoodShare Roster</title>
     
     <link rel="manifest" href="./manifest.json">
