--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <meta http-equiv="Cache-Control" content="no-store, no-cache, must-revalidate">
     <meta http-equiv="Pragma" content="no-cache">
     <meta http-equiv="Expires" content="0">
-    <!-- <meta http-equiv="refresh" content="0; url=./index.html" /> -->
     <title>FoodShare Roster</title>
     
     <link rel="manifest" href="./manifest.json">
@@ -19,6 +18,31 @@
 
     <link rel="stylesheet" href="styles.css">
 </head>
+<script>
+  // GitHub Pages SPA redirect handling
+  (function(){
+    var redirect = sessionStorage.redirect;
+    delete sessionStorage.redirect;
+    if (redirect && redirect != location.href) {
+      history.replaceState(null, null, redirect);
+    }
+  })();
+  
+  if ('serviceWorker' in navigator) {
+    navigator.serviceWorker.getRegistrations().then(function(registrations) {
+      registrations.forEach(function(registration) {
+        registration.unregister();
+      });
+    });
+    if ('caches' in window) {
+      caches.keys().then(function(names) {
+        names.forEach(function(name) {
+          caches.delete(name);
+        });
+      });
+    }
+  }
+</script>
 <body>
 
     <!-- Turn Notification Banner -->
