--- a/404.html
+++ b/404.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>FoodShare Roster</title>
+  <title>KC GROW: Food-Share Roster</title>
   <script>
     // Single Page App fix for GitHub Pages
     // Redirects all 404s to index.html while preserving the path
