--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <!-- Header -->
     <header class="header">
         <div class="header-content">
-            <h1>FoodShare Roster</h1>
+            <h1>KC GROW: Food-Share Roster</h1>
             <div class="header-controls">
                 <button class="view-toggle-btn" id="viewToggleBtn" onclick="app.toggleView()">
                     <span id="viewToggleIcon">⛪</span>
