Removed unnecessary alert.

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             <!-- Right Panel: Statistics (25%) -->
             <div class="panel" style="grid-column: 2;">
                 <div class="panel-header">
-                    <div class="panel-title">📊 Statistics</div>
+                    <div class="panel-title">Statistics</div>
                 </div>
                 <div class="panel-body">
                     <div class="stats-grid" id="statsContainer">
